working contacts but slow